CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( VO )
#SET( CMAKE_CXX_COMPILER "g++")
#SET( CMAKE_BUILD_TYPE Release  )
SET( CMAKE_CXX_FLAGS "-std=c++11")
	
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 
#SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib) 

#LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
	
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src)
